--- a/gb/24/1/19/n14162035.md
+++ b/gb/24/1/19/n14162035.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>消防局庆祝消防节  县长表扬绩优消防人员及义消</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162036-660145-600x400.jpg" />
 <h6> 消防局生日愿望合影（苗县府提供）
 </h6>
 <hr>
-<p>【大纪元2024年01月19日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县府消防局19日上午在消防局举行119<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E8%8A%82.md#1">消防节</a>暨25周年局庆，县长钟东锦亲自颁奖表扬服务满20、30、35年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%89%E6%B6%88.md#1">义消</a>人员及年度绩优消防、义消、宣导、救护、救难人员、防灾士，感谢劳苦功高的消防伙伴们对苗栗县无私的奉献与牺牲，让全体县民生命财产获得最大的保障。</p>
-<p>该活动苗栗县长钟东锦、消防局长匡梦麟、议长李文斌、议员余文忠、杨明烨、郑碧玉、曾美露、廖秀红、陈碧华、陈永贤、叶忠伦、张佳玲、徐筱菁、翁杰、孙素娥、邱毓兴、许樱萍以及地方民意代表等人，共同出席表扬服务满20、30、35年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%89%E6%B6%88.md#1">义消</a>人员及年度绩优消防、救护救难员等，另外还表扬消防局第一次举办的车祸救助竞赛获奖队伍及优良的企业防灾士，赞誉他们在竞赛行动中的卓越表现及担任民间自主防救灾工作的种子，为自己赢得了崇高的喝采。</p>
-<figure id="attachment_14162040" aria-describedby="caption-attachment-14162040" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162040-660149.jpg"><img class="size-large wp-image-14162040" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162040-660149-600x424.jpg" alt="" width="600" b="424" /></a><figcaption id="caption-attachment-14162040" class="wp-caption-text">服务满35年义消刘接榕（苗县府提供）</figcaption></figure>
-<figure id="attachment_14162039" aria-describedby="caption-attachment-14162039" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162039-660148.jpg"><img class="size-large wp-image-14162039" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162039-660148-600x373.jpg" alt="" width="600" b="373" /></a><figcaption id="caption-attachment-14162039" class="wp-caption-text">消防局长致词（苗县府提供）</figcaption></figure>
-<figure id="attachment_14162038" aria-describedby="caption-attachment-14162038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162038-660147.jpg"><img class="size-large wp-image-14162038" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162038-660147-600x361.jpg" alt="" width="600" b="361" /></a><figcaption id="caption-attachment-14162038" class="wp-caption-text">县长与嘉宾切蛋糕（苗县府提供）</figcaption></figure>
-<figure id="attachment_14162037" aria-describedby="caption-attachment-14162037" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162037-660146.jpg"><img class="size-large wp-image-14162037" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162037-660146-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14162037" class="wp-caption-text">绩优消防义消全体大合照（苗县府提供）</figcaption></figure>
+<p>【大纪元2024年01月19日讯】（大纪元记者陈文敏台湾苗栗报导）苗栗县府消防局19日上午在消防局举行119消防节暨25周年局庆，县长钟东锦亲自颁奖表扬服务满20、30、35年义消人员及年度绩优消防、义消、宣导、救护、救难人员、防灾士，感谢劳苦功高的消防伙伴们对苗栗县无私的奉献与牺牲，让全体县民生命财产获得最大的保障。</p>
+<p>该活动苗栗县长钟东锦、消防局长匡梦麟、议长李文斌、议员余文忠、杨明烨、郑碧玉、曾美露、廖秀红、陈碧华、陈永贤、叶忠伦、张佳玲、徐筱菁、翁杰、孙素娥、邱毓兴、许樱萍以及地方民意代表等人，共同出席表扬服务满20、30、35年义消人员及年度绩优消防、救护救难员等，另外还表扬消防局第一次举办的车祸救助竞赛获奖队伍及优良的企业防灾士，赞誉他们在竞赛行动中的卓越表现及担任民间自主防救灾工作的种子，为自己赢得了崇高的喝采。</p>
+<figure id="attachment_14162040" aria-describedby="caption-attachment-14162040" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162040-660149.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14162040" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162040-660149-600x424.jpg" alt="" width="600" b="424" /></a><figcaption id="caption-attachment-14162040" class="wp-caption-text">服务满35年义消刘接榕（苗县府提供）</figcaption></figure>
+<figure id="attachment_14162039" aria-describedby="caption-attachment-14162039" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162039-660148.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14162039" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162039-660148-600x373.jpg" alt="" width="600" b="373" /></a><figcaption id="caption-attachment-14162039" class="wp-caption-text">消防局长致词（苗县府提供）</figcaption></figure>
+<figure id="attachment_14162038" aria-describedby="caption-attachment-14162038" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162038-660147.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14162038" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162038-660147-600x361.jpg" alt="" width="600" b="361" /></a><figcaption id="caption-attachment-14162038" class="wp-caption-text">县长与嘉宾切蛋糕（苗县府提供）</figcaption></figure>
+<figure id="attachment_14162037" aria-describedby="caption-attachment-14162037" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/01/id14162037-660146.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14162037" src="https://i.epochtimes.com/assets/uploads/2024/01/id14162037-660146-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14162037" class="wp-caption-text">绩优消防义消全体大合照（苗县府提供）</figcaption></figure>
 <p>表杨绩优消防人员中值得关注的是有2位夫妻同名同姓，夫名为〝黄思颕〞、妻为〝黄思颖〞，今天一同接受表扬，随后带着儿子们一家人与县长一同合影，夫妻不仅同名同姓更同为消防人员，真是不可多得的缘分，感谢两夫妻能齐心协力共同守护乡亲的生命安全。另外，服务满35年义消刘接榕亦于今年1月16日接受总统表扬绩优义消人员。</p>
 <p>县长钟东锦感谢今年受奖的106位伙伴，因为有您们秉持认真负责的态度，坚守岗位，为保卫县民生命财产安全牺牲付出，而防灾不仅是公部门的责任，更需要民间及企业的互相合作，才能顺利有效的推动。</p>
 <p>消防局长匡梦麟指出县府消防局真是5告赞，第一赞是强化消防人力，合理工时分配、第二赞积极汰换装备，争取中央预算，第三赞优化同仁居住环境，赓续打造专业训练基地、第四赞提供完善到院前救护，善用民间资源、第五赞发挥团队精神，创造苗消新视野。藉由这5个赞大大提升消防救护人员在救护救灾的效能，让县民在被救护时能有更多的保障。</p>
@@ -20,41 +20,40 @@
 <p>苗栗县政府消防局将持续透过专业精进抢救技能使县民生命及财产安全获得更多保障，继续做苗栗乡亲安居乐业的强力后盾，朝着“零灾害，零事故，苗栗安康”的生日愿望迈进！</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910615.md#1">庆祝消防节 “宜兰瓜哥”赠基隆消防局水饺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101915.md#1">2023年台义消技能交流 嘉市绳索救援获特优</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128462.md#1">高平分队办理龙潭义消中队20周年庆祝宣导</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144239.md#1">台东义消总队长交接 建构专业团队守护县民</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159402.md#1">“119消防节” 桃园表扬50位绩优消防人员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161242.md#1">119消防节  屏县府表扬62位消防楷模</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161046.md#1">东西看不清楚、直线变曲线 当心是“黄斑部病变”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161102.md#1">新瓦屋有龙出没 杨文科邀民众新年到竹县寻龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161087.md#1">赖清添先生纪念奖学金 市长罗雪珠颁发6位受奖者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160323.md#1">华山基金会为长辈新年祈福 县长担任祈福大使</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/19/n13910615.md#1">庆祝消防节 “宜兰瓜哥”赠基隆消防局水饺</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/24/n14101915.md#1">2023年台义消技能交流 嘉市绳索救援获特优</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/2/n14128462.md#1">高平分队办理龙潭义消中队20周年庆祝宣导</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/27/n14144239.md#1">台东义消总队长交接 建构专业团队守护县民</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/16/n14159402.md#1">“119消防节” 桃园表扬50位绩优消防人员</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/18/n14161242.md#1">119消防节  屏县府表扬62位消防楷模</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305157.md#1">软式输尿管镜肾内碎石术 恢复快、疼痛低、无伤口</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305037.md#1">卫福部金卓越社区选拔评鉴 参赛7社区展现丰硕成果争取入选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304967.md#1">部苗与正德爱心厨房合作 宣导预防夏季热伤害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304418.md#1">加工蔬菜食材变化多 丰富料理好滋味</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">共产暴政录：宣导暴力杀戮的彭湃</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/8/n9817670.md#1" target="_blank">汉清：百年沧桑</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md#1" target="_blank">印度媒体：成千上万人炼法轮功 深受裨益</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156773.md#1">水母状UFO现身伊拉克美军基地 画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156765.md#1">留意！为何甲辰龙年起连续五年没有“年三十”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154327.md#1">穿越时空而来 神秘赊刀人二则预言引起共振</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156294.md#1">【未解之谜】美国迈阿密购物中心惊现“大灰人”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154365.md#1">她劝丈夫这么做 才保全了儿子的性命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161068.md#1">【全球新闻】中印边境冲突 中共士兵两次被击退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14160778.md#1">【新唐人快报】“迁西好人”获释 网友喊冤有用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14160739.md#1">【菁英论坛】财新猛踩痛点 刀把子黑幕太多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159800.md#1">除草剂失效 农作物杀伤性杂草正在美国蔓延</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160059.md#1">胡海峰升官破规矩 分析指中南海有特别盘算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160408.md#1">中国中产“崩塌”消息密集传来 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159828.md#1">刀郎获赔7.5万元 女歌手降央卓玛被判侵权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159148.md#1">面相大师12年前预言“赖清德有总统命”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159778.md#1">王一博经纪公司股价一日暴跌近八成 引恐慌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159856.md#1">前东家发布版权声明 邓紫棋演唱歌曲被涉及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159415.md#1">RM与V获选为最精锐训练兵 训练结训公开合照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Dockers 男士超细斜纹夹克 80%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156286.md#1">每日必吃3类食物 日87岁执业医师分享健康秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153869.md#1">抗发炎 哪些顶级食物该吃 哪些一定不要吃？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159463.md#1">调查：全球最准时的机场和航空公司排名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159636.md#1">一种有效却被忽视的慢性疼痛治疗方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304257.md#1">【时事金扫描】瓦格纳现委国 马杜罗约架马斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303886.md#1">【新闻欣视角】中共两战区司令突换人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304239.md#1">昆凌分享7岁儿一句话 曝周杰伦在家中地位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302515.md#1">有多少食品添加剂不列在成分标签中？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/19/n14162035.htm">消防局庆祝消防节  县长表扬绩优消防人员及义消</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/19/n14162035.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/19/n14162035.htm">消防局庆祝消防节  县长表扬绩优消防人员及义消</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/19/n14162035.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
